# MLOPs_Automation

./: .gitignore  MLOPs_automation.excalidraw  README.md  cloudbuild_1.yaml  cloudbuild_2.yaml  commands_used.txt
data_collection_and_versioning/: .dockerignore  cronjob.py  dockerfile  main.py  pyproject.toml  requirements.txt
dbapp/: .dockerignore  .env  app.py  dockerfile  pyproject.toml  requirements.txt
images/excalidraw_files/: Basic_Pipeline.excalidraw  KSA_GSA.excalidraw  My_Project.excalidraw  My_Project_2.excalidraw  Simplified_Pipeline.excalidraw
k8s/: confmap_1.yaml  confmap_2.yaml  cronjob.yaml  dbapp.yaml  ingress.yaml  linear_regression.yaml  mlapp.yaml  mlflow-ingress.yaml  mlflow.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  serviceaccount.yaml  webapp.yaml
k8s_ml/: confmap_1.yaml  ksa.yaml  linear_regression.yaml
k8s_web/: ingress.yaml  ksa.yaml  mlapp.yaml  prometheus-configmap.yaml  prometheus-service.yaml  restart-mlapp.yaml
mlapp/: app.py  dockerfile  main.py  pyproject.toml  requirements.txt
mlflow/: dockerfile
models/linear_regression/: dockerfile  pyproject.toml  requirements.txt  train.py
webapp/: app.py  dockerfile  pyproject.toml  requirements.txt
webapp/templates/: correction_success.html  error.html  index.html  predict.html  result.html  show_predictions.html
