[project]
name = "data-collection-and-versioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "scikit-learn>=1.7.2",
    "typing>=3.10.0.0",
]
