[project]
name = "mlapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "flask>=3.1.2",
    "functools",
    "mlflow>=3.5.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "scikit-learn>=1.7.2",
    "waitress>=3.0.2",
]
